--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,6 +18,9 @@
         <a href="/control/missions" class="nav-tab <%= activePage === 'missions' ? 'active' : '' %>">
             <span>Missions</span>
         </a>
+        <a href="/control/flight-planner" class="nav-tab <%= activePage === 'planner' ? 'active' : '' %>">
+            <span>Flight Planner</span>
+        </a>
         <a href="/control/geofences" class="nav-tab <%= activePage === 'geofences' ? 'active' : '' %>">
             <span>Geofences</span>
         </a>
